tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#setUpSuite().mjava
	@BeforeList
	public void setUpSuite() throws Exception {
		TestUtils.disableColliders(ColliderType.ALL);
		project = TestUtils.createProject("ErrorReportingTests");
		ResourcesPlugin.getWorkspace().getRoot().getProject(getPHPVersion() + "ErrorReportingTests");
		for (final String fileName : fileNames) {
			PdttFile pdttFile = new PdttFile(fileName);
			pdttFiles.put(fileName, pdttFile);
			files.put(fileName, createFile(pdttFile.getFile().trim()));
		}
		TestUtils.setProjectPhpVersion(project, getPHPVersion());
		// Perform full build to trigger errors check
		project.build(IncrementalProjectBuilder.FULL_BUILD, null);
		TestUtils.waitForIndexer();
	}

